# capture_pico_zense

./: CMakeLists.txt  README.md
cfg/: recognition_parameter.toml
include/: PicoZenseSensorClass.h  PicoZenseSetter.h  SensorManager.h  SensorWrapper.h  header.h
src/: PicoZenseSensorClass.cpp  PicoZenseSetter.cpp  SensorManager.cpp  main.cpp
